@@ -5,20 +5,22 @@
 </div>
 <div class="p4 ui-widget-content ui-corner-bottom" >
 <?php
+$qsa  = pnp::addToUri(array('start' => $this->start,'end' => $this->end, 'view' => $this->view), False);
 if($this->config->conf['use_calendar']){
 	echo "<a title=\"".Kohana::lang('common.title-calendar-link')."\" href=\"#\" id=\"button\"><img src=\"".url::base()."media/images/calendar.png\"></a>"; 
 }
 if($this->config->conf['use_fpdf'] == 1 && $position == "graph"){
-	echo "<a title=\"".Kohana::lang('common.title-pdf-link')."\" href=\"".url::base()."pdf".$this->url."&view=".$this->view."\"><img src=\"".url::base()."media/images/PDF_32.png\"></a>\n";
+	echo "<a title=\"".Kohana::lang('common.title-pdf-link')."\" href=\"".url::base()."pdf".$qsa."\"><img src=\"".url::base()."media/images/PDF_32.png\"></a>\n";
 }
 if($this->config->conf['use_fpdf'] == 1 && $position == "basket"){
-	echo "<a title=\"".Kohana::lang('common.title-pdf-link')."\" href=\"".url::base()."pdf/basket?view=".$this->view."\"><img src=\"".url::base()."media/images/PDF_32.png\"></a>\n";
+	echo "<a title=\"".Kohana::lang('common.title-pdf-link')."\" href=\"".url::base()."pdf/basket/".$qsa."\"><img src=\"".url::base()."media/images/PDF_32.png\"></a>\n";
 }
 if($this->config->conf['use_fpdf'] == 1 && $position == "page"){
-	echo "<a title=\"".Kohana::lang('common.title-pdf-link')."\" href=\"".url::base()."pdf/page/".$this->page."?view=".$this->view."\"><img src=\"".url::base()."media/images/PDF_32.png\"></a>\n";
+	echo "<a title=\"".Kohana::lang('common.title-pdf-link')."\" href=\"".url::base()."pdf/page/".$this->page.$qsa."\"><img src=\"".url::base()."media/images/PDF_32.png\"></a>\n";
 }
 if($this->config->conf['show_xml_icon'] == 1 && $position == "graph"){
-	echo "<a title=\"".Kohana::lang('common.title-xml-link')."\" href=\"".url::base()."xml".$this->url."\"><img src=\"".url::base()."media/images/XML_32.png\"></a>\n";
+	$qsa  = pnp::addToUri(array(), False);
+	echo "<a title=\"".Kohana::lang('common.title-xml-link')."\" href=\"".url::base()."xml".$qsa."\"><img src=\"".url::base()."media/images/XML_32.png\"></a>\n";
 }
 if($this->data->getFirstPage() && $this->isAuthorizedFor('pages') ){
 	echo "<a title=\"".Kohana::lang('common.title-pages-link')."\" href=\"".url::base()."page\"><img src=\"".url::base()."media/images/pages.png\"></a>\n";
