@@ -1,5 +1,7 @@
 **Current GIT Head**
 
+  * Bugfix: Wrong pdf link used on site 'pages' and 'basket'
+
 **pnp-0.6.1 11/22/2009**
 
   * Feature: RRD heartbeat per check_command -> [[tpl_custom]] 
